--- a/src/public/styles/global.css
+++ b/src/public/styles/global.css
@@ -1501,3 +1501,14 @@ header {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 4px;
 }
+
+/*activity.js*/
+
+.activity{
+    position: relative;
+    width: 100%;
+    height: 260px;
+    background-color: white;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    top: 3%;
+}
