--- a/src/public/styles/global.css
+++ b/src/public/styles/global.css
@@ -336,10 +336,21 @@ a {
         display: none;
     }
 
+    .mask{
+        display: block;
+    }
 
-.mask{
-    display: block;
-}
+    .side-left{
+        display: none;
+    }
+
+    .side-right{
+        display: none;
+    }
+
+    .side-middle{
+        width: 100%;
+    }
 }
 
 /*NAVBAR.js*/
@@ -1269,6 +1280,29 @@ header {
     display: flex;
 }
 
+@media(max-width:1024px){
+    .user-card{
+        height: 130px;
+    }
+
+    .user-back{
+        height: 65px;
+    }
+
+    .user-circle{
+        width: 40px;
+        height: 40px;
+    }
+
+    .user-details-home{
+        font-size: 8px;
+    }
+
+    .user-name{
+        font-size: 12px;
+    }
+}
+
 /*create-card.js*/
 
 .create-box{
@@ -1296,6 +1330,21 @@ header {
     font-weight: bold;
 }
 
+@media(max-width:1024px){
+    .create-box{
+        height: 60px;
+    }
+    .create-button{
+        height: 28px;
+        font-size: 12px;
+    }
+}
+
+@media(max-width:768px){
+    .create-button{
+        font-size: 10px;
+    }
+}
 /*hashtag-box.js*/
 
 .hashtag-box{
@@ -1346,6 +1395,87 @@ header {
     transform: translate(-50%,-50%);
 }
 
+@media(max-width:1024px){
+    .hashtag-box{
+        height: 155px;
+    }
+
+    .hash-head{
+        font-size: 8px;
+    }
+
+    .hashes{
+        width: 44px;
+        height: 24px;
+    }
+
+    .text{
+        font-size: 8px;
+    }
+}
+
+/*activity.js*/
+
+.activity{
+    position: relative;
+    width: 100%;
+    height: fit-content;
+    background-color: white;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    top: 3%;
+    border-radius: 4px;
+}
+
+.activity-head{
+    width: fit-content;
+    height: 11px;
+    font-size: 12px;
+    line-height: 11px;
+    text-transform: uppercase;
+    color: #181818;
+    padding-top: 10%;
+    padding-left: 26px;
+    font-weight: bold;
+}
+
+.activity-div{
+    position: relative;
+    left: 26px;
+    padding-top: 2%;
+    padding-bottom: 5%;
+}
+
+.activity-detail{
+    position: relative;
+    width: fit-content;
+    height: fit-content;
+    padding-bottom: 2%;
+}
+
+.number{
+    font-size: 44px;
+    color: #6C63FF;
+}
+
+.number-detail{
+    color: #555;
+    font-weight: bold;
+    font-size: 12px;
+}
+
+@media(max-width:1024px){
+    .activity-head{
+        font-size: 8px;
+    }
+
+    .number{
+        font-size: 36px;
+    }
+
+    .number-detail{
+        font-size: 8px;
+    }
+}
 /*user-create-post.js*/
 
 .create-post{
@@ -1492,7 +1622,25 @@ header {
     color: #6C63FF;
 }
 
-/*follower.js*/
+@media(max-width:1024px){
+    .gradient{
+        left:20px;
+    }
+}
+
+@media(max-width:786px){
+    .gradient{
+        left: 16px;
+    }
+}
+
+@media(max-width:425px){
+    .gradient{
+        left:12px;
+    }
+}
+
+/*advertisement.js*/
 
 .follower-card{
     position: relative;
@@ -1503,50 +1651,3 @@ header {
     border-radius: 4px;
 }
 
-/*activity.js*/
-
-.activity{
-    position: relative;
-    width: 100%;
-    height: fit-content;
-    background-color: white;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    top: 3%;
-    border-radius: 4px;
-}
-
-.activity-head{
-    width: fit-content;
-    height: 11px;
-    font-size: 12px;
-    line-height: 11px;
-    text-transform: uppercase;
-    color: #181818;
-    padding-top: 10%;
-    padding-left: 26px;
-    font-weight: bold;
-}
-
-.activity-div{
-    position: relative;
-    left: 26px;
-    padding-top: 2%;
-    padding-bottom: 5%;
-}
-
-.activity-detail{
-    position: relative;
-    width: fit-content;
-    height: 80px;
-}
-
-.number{
-    font-size: 44px;
-    color: #6C63FF;
-}
-
-.number-detail{
-    color: #555;
-    font-weight: bold;
-    font-size: 12px;
-}
