--- a/src/public/styles/global.css
+++ b/src/public/styles/global.css
@@ -1651,3 +1651,41 @@ header {
     border-radius: 4px;
 }
 
+.home-search{
+    position: relative;
+    width: 100%;
+    height: 40px;
+    border: 1px solid #6C63FF;
+    border-radius: 4px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    top:3%;
+    display: flex;
+}
+
+.search-svg{
+    position: relative;
+    top:50%;
+    transform: translate(0,-50%);
+    left:26px;
+    width: fit-content;
+    height: fit-content;
+}
+
+.search-text{
+    position: relative;
+    width: 80%;
+    height: 32px;
+    font-size: 18px;
+    line-height: 180%;
+    color: #6C63FF;
+    left: 52px;
+    margin: 0 0;
+    top:50%;
+    transform: translate(0,-50%);
+}
+
+.search-svg button{
+    outline: none;
+    background: none;
+    border: none;
+}
