--- a/src/public/styles/global.css
+++ b/src/public/styles/global.css
@@ -8,7 +8,7 @@ body, html {
 }
 
 body {
-    background: #e4e4e4;
+    background: whitesmoke;
 }
 
 /*index.jsx*/
@@ -81,7 +81,7 @@ form h2 {
 
 input:-webkit-autofill {
     -webkit-text-fill-color: #555 !important;
-    background-color: #e4e4e4 !important;
+    background-color: whitesmoke !important;
 }
 
 .input-div:after {
@@ -165,7 +165,7 @@ a {
 
 .btn:hover {
     background-color: #6C63FF;
-    color: #e4e4e4;
+    color: whitesmoke;
     transition: background-color 0.3s ease-in,
     color 0.3s ease-in;
 }
@@ -188,7 +188,7 @@ a {
 
 .sign-btn:hover {
     background-color: #6C63FF;
-    color: #e4e4e4;
+    color: whitesmoke;
     transition: background-color 0.3s ease-in,
     color 0.3s ease-in;
 }
@@ -198,7 +198,7 @@ a {
         grid-gap: 3rem;
     }
 
-    .programmer img{
+    .programmer img {
         width: 400px;
     }
 }
@@ -279,7 +279,7 @@ a {
     width: 60%;
 }
 
-.back{
+.back {
     display: block;
     left: 12%;
     position: fixed;
@@ -287,7 +287,7 @@ a {
     width: 75%;
 }
 
-.back-m{
+.back-m {
     position: fixed;
     z-index: -1;
     display: none;
@@ -295,25 +295,25 @@ a {
     bottom: 0;
 }
 
-.mask{
+.mask {
     position: fixed;
     z-index: -1000;
     bottom: 0;
     display: none;
 }
 
-.side-middle{
+.side-middle {
     position: relative;
     width: 60%;
     margin: 0 5%;
     align-content: center;
 }
 
-.side-left{
+.side-left {
     width: 20%;
 }
 
-.side-right{
+.side-right {
     width: 20%;
 }
 
@@ -328,27 +328,27 @@ a {
         width: 0;
     }
 
-    .back-m{
+    .back-m {
         display: block;
     }
 
-    .back{
+    .back {
         display: none;
     }
 
-    .mask{
+    .mask {
         display: block;
     }
 
-    .side-left{
+    .side-left {
         display: none;
     }
 
-    .side-right{
+    .side-right {
         display: none;
     }
 
-    .side-middle{
+    .side-middle {
         width: 100%;
     }
 }
@@ -362,7 +362,7 @@ header {
 .navbar {
     position: fixed;
     width: 100%;
-    background: #e4e4e4;
+    background: whitesmoke;
     top: 0;
     left: 0;
     height: 56px;
@@ -403,7 +403,7 @@ header {
     margin: .5rem;
 }
 
-.logo{
+.logo {
     width: 20px;
 }
 
@@ -443,7 +443,7 @@ header {
 
 .side-drawer {
     height: 100%;
-    background-color: #e4e4e4;
+    background-color: whitesmoke;
     box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.5);
     position: fixed;
     top: 0;
@@ -513,7 +513,7 @@ header {
         padding: 0 4rem;
     }
 
-    .nav-user{
+    .nav-user {
         display: none;
     }
 }
@@ -748,7 +748,7 @@ header {
 
 @media (max-width: 426px) {
 
-    .rendered-values{
+    .rendered-values {
         margin-top: 4rem;
         margin-left: 3rem;
         margin-right: 3rem;
@@ -798,7 +798,7 @@ header {
 
 @media (max-width: 375px) {
 
-    .rendered-values{
+    .rendered-values {
         margin-top: 3rem;
         margin-left: 3rem;
         margin-right: 3rem;
@@ -824,7 +824,7 @@ header {
 
 @media (max-width: 320px) {
 
-    .rendered-values{
+    .rendered-values {
         margin-top: 4rem;
         margin-left: 3rem;
         margin-right: 3rem;
@@ -872,7 +872,7 @@ header {
 
 .create-btn:hover {
     background-color: #6C63FF;
-    color: #e4e4e4;
+    color: whitesmoke;
     transition: background-color 0.3s ease-in,
     color 0.3s ease-in;
 }
@@ -894,14 +894,14 @@ header {
 
 /*creatae.jsx*/
 
-.create-input{
+.create-input {
     position: relative;
     align-self: center;
     width: 100%;
     height: 700px;
 }
 
-.create-text{
+.create-text {
     border-style: solid;
     border-color: #555;
     border-width: 1px;
@@ -917,7 +917,7 @@ header {
     height: 700px;
 }
 
-.create-form h5{
+.create-form h5 {
     float: right;
     color: #555;
 }
@@ -925,7 +925,7 @@ header {
 /*blog.jsx*/
 
 
-.heading-blog{
+.heading-blog {
     width: fit-content;
     top: 20%;
     left: 15%;
@@ -933,23 +933,23 @@ header {
     z-index: -1;
 }
 
-.heading-blog h1{
+.heading-blog h1 {
     color: #6C63FF;
     font-size: 200px;
     display: flex;
 }
 
-.text-blog{
+.text-blog {
     position: fixed;
     z-index: -1;
 }
 
-.text-blog p{
+.text-blog p {
     color: #555;
     font-size: 50px;
 }
 
-.blog-svg{
+.blog-svg {
     z-index: -2;
     position: fixed;
     width: fit-content;
@@ -957,11 +957,11 @@ header {
     left: 55%;
 }
 
-.blog-svg img{
+.blog-svg img {
     width: 55%;
 }
 
-.rendered-values-blogs{
+.rendered-values-blogs {
     height: 100%;
     width: 100%;
     margin-top: 907px;
@@ -971,107 +971,108 @@ header {
     display: none;
 }
 
-@media(max-width: 1024px){
-    .heading-blog{
+@media (max-width: 1024px) {
+    .heading-blog {
         width: fit-content;
         top: 20%;
         left: 15%;
         position: fixed;
         z-index: -1;
     }
-    
-    .heading-blog h1{
+
+    .heading-blog h1 {
         color: #6C63FF;
         font-size: 100px;
         display: flex;
     }
-    
-    .text-blog{
+
+    .text-blog {
         position: fixed;
         z-index: -1;
     }
-    
-    .text-blog p{
+
+    .text-blog p {
         color: #555;
         font-size: 25px;
     }
-    
-    .blog-svg{
+
+    .blog-svg {
         z-index: -2;
         position: fixed;
         width: fit-content;
         top: 20rem;
         left: 30%;
     }
-    
-    .blog-svg img{
+
+    .blog-svg img {
         width: 60%;
     }
 }
 
-@media(max-width:425px){
-    
-    .heading-blog h1{
+@media (max-width: 425px) {
+
+    .heading-blog h1 {
         font-size: 500%;
     }
-    .blog-svg{
+
+    .blog-svg {
         display: none;
     }
 
-    .text-blog p{
+    .text-blog p {
         font-size: 16px;
     }
 
-    .blog-svg-m{
-        top:50%;
+    .blog-svg-m {
+        top: 50%;
         left: 20%;
         position: fixed;
         display: block;
         z-index: -2;
     }
 
-    .blog-svg-m img{
+    .blog-svg-m img {
         width: 80%;
     }
 }
 
 /*cardb.js*/
 
-.blog-page{
+.blog-page {
     width: 100%;
     height: fit-content;
     box-shadow: 0 0 2px #999;
 }
 
-.dev-div{
+.dev-div {
     width: 100%;
     height: 600px;
     display: flex;
 }
 
-.dev-div:nth-child(odd){
-    background-color: #e4e4e4;
+.dev-div:nth-child(odd) {
+    background-color: whitesmoke;
 }
 
-.dev-div:nth-child(even){
-    background-color:rgb(136, 130, 255);
+.dev-div:nth-child(even) {
+    background-color: rgb(136, 130, 255);
 }
 
-.details{
-    width:60%;
+.details {
+    width: 60%;
     margin: 0 0;
     margin-top: 5rem;
     margin-left: 5rem;
 }
 
-.head{
+.head {
     width: fit-content;
     border-bottom-style: solid;
     border-width: 3px;
     border-bottom-color: rgb(133, 133, 133);
 }
 
-.head-alt{
+.head-alt {
     width: fit-content;
     border-bottom-style: solid;
     margin-right: 10px;
@@ -1079,25 +1080,25 @@ header {
     border-bottom-color: rgb(196, 196, 196);
 }
 
-.head h1{
+.head h1 {
     color: #6C63FF;
     font-size: 100px;
     padding-bottom: 4px;
 }
 
-.head-alt h1{
-    color: #e4e4e4;
+.head-alt h1 {
+    color: whitesmoke;
     font-size: 100px;
     padding-bottom: 4px;
 }
 
-.head-details{
+.head-details {
     padding-top: 10px;
     font-size: 36px;
     color: rgb(160, 160, 160);
 }
 
-.head-details-alt{
+.head-details-alt {
     padding-top: 10px;
     font-size: 36px;
     color: rgb(223, 221, 250);
@@ -1115,9 +1116,9 @@ header {
     color: #6C63FF;
 }
 
-.explore-btn:hover{
+.explore-btn:hover {
     background-color: #6C63FF;
-    color: #e4e4e4;
+    color: whitesmoke;
     transition: background-color 0.3s ease-in-out,
     color 0.3s ease-in-out;
 }
@@ -1132,51 +1133,51 @@ header {
     outline: none;
     background-color: transparent;
     border-style: solid;
-    border-color: #e4e4e4;
-    color: #e4e4e4;
+    border-color: whitesmoke;
+    color: whitesmoke;
 }
 
-.explore-btn-alt:hover{
-    background-color: #e4e4e4;
+.explore-btn-alt:hover {
+    background-color: whitesmoke;
     color: rgb(136, 130, 255);
     transition: background-color 0.3s ease-in-out,
     color 0.3s ease-in-out;
 }
 
-.div-svg{
-    width:40%;
+.div-svg {
+    width: 40%;
     padding-top: 20px;
     padding-left: 5rem;
 }
 
-.div-svg img{
+.div-svg img {
     width: 80%;
 }
 
-@media (max-width:1024px){
+@media (max-width: 1024px) {
 
-    .dev-div{
+    .dev-div {
         height: 400px;
     }
 
-    .details{
-        width:60%;
+    .details {
+        width: 60%;
         margin-left: 2rem;
     }
 
-    .head h1{
+    .head h1 {
         font-size: 50px;
     }
-    
-    .head-alt h1{
+
+    .head-alt h1 {
         font-size: 50px;
     }
-    
-    .head-details{
+
+    .head-details {
         font-size: 28px;
     }
-    
-    .head-details-alt{
+
+    .head-details-alt {
         font-size: 28px;
     }
 
@@ -1186,7 +1187,7 @@ header {
         margin: 4rem 0;
         font-size: 1rem;
     }
-    
+
     .explore-btn-alt {
         width: 7rem;
         height: 2.5rem;
@@ -1195,40 +1196,40 @@ header {
     }
 }
 
-@media(max-width:425px){
-    
-    .dev-div{
+@media (max-width: 425px) {
+
+    .dev-div {
         height: 400px;
     }
 
-    .div-svg{
+    .div-svg {
         display: none;
     }
-    
-    .details{
+
+    .details {
         width: 100%;
     }
 
-    .head h1{
+    .head h1 {
         font-size: 48px;
     }
 
-    .head-alt h1{
+    .head-alt h1 {
         font-size: 48px;
     }
 
-    .head-details{
+    .head-details {
         font-size: 16px;
     }
 
-    .head-details-alt{
+    .head-details-alt {
         font-size: 16px;
     }
 }
 
 /*user-card.js*/
 
-.user-card{
+.user-card {
     width: 100%;
     height: 230px;
     background: #FFFFFF;
@@ -1236,20 +1237,20 @@ header {
     border-radius: 4px;
 }
 
-.user-back{
+.user-back {
     width: 100%;
     height: 115px;
     background-color: rgb(191, 188, 245);
     border-radius: 4px 4px 0px 0px;
 }
 
-.user-circle{
+.user-circle {
     position: relative;
     width: 80px;
     height: 80px;
     left: 50%;
     top: 50%;
-    transform: translate(-50%,0);
+    transform: translate(-50%, 0);
     border-radius: 100%;
     background-color: rgb(191, 188, 245);
     background-blend-mode: normal;
@@ -1257,7 +1258,7 @@ header {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.user-name{
+.user-name {
     width: 100%;
     height: 25px;
     margin-top: 15%;
@@ -1268,17 +1269,17 @@ header {
     line-height: 180%;
 }
 
-.user-details-home{
+.user-details-home {
     width: 100%;
     height: 36px;
-    margin-top:1%;
+    margin-top: 1%;
     font-size: 12px;
     line-height: 100%;
     text-align: center;
     color: #181818;
 }
 
-.render-user{
+.render-user {
     position: relative;
     padding-right: 10%;
     padding-left: 10%;
@@ -1287,32 +1288,32 @@ header {
     display: flex;
 }
 
-@media(max-width:1024px){
-    .user-card{
+@media (max-width: 1024px) {
+    .user-card {
         height: 130px;
     }
 
-    .user-back{
+    .user-back {
         height: 65px;
     }
 
-    .user-circle{
+    .user-circle {
         width: 40px;
         height: 40px;
     }
 
-    .user-details-home{
+    .user-details-home {
         font-size: 8px;
     }
 
-    .user-name{
+    .user-name {
         font-size: 12px;
     }
 }
 
 /*create-card.js*/
 
-.create-box{
+.create-box {
     width: 100%;
     height: 75px;
     margin-top: 10%;
@@ -1321,13 +1322,13 @@ header {
     border-radius: 4px;
 }
 
-.create-button{
+.create-button {
     position: relative;
     width: 80%;
     height: 32px;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     text-align: center;
     background: #6C63FF;
     color: #FFFFFF;
@@ -1337,24 +1338,26 @@ header {
     font-weight: bold;
 }
 
-@media(max-width:1024px){
-    .create-box{
+@media (max-width: 1024px) {
+    .create-box {
         height: 60px;
     }
-    .create-button{
+
+    .create-button {
         height: 28px;
         font-size: 12px;
     }
 }
 
-@media(max-width:768px){
-    .create-button{
+@media (max-width: 768px) {
+    .create-button {
         font-size: 10px;
     }
 }
+
 /*hashtag-box.js*/
 
-.hashtag-box{
+.hashtag-box {
     width: 100%;
     height: 225px;
     margin-top: 10%;
@@ -1363,7 +1366,7 @@ header {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.hash-head{
+.hash-head {
     position: relative;
     width: fit-content;
     height: 11px;
@@ -1376,7 +1379,7 @@ header {
     font-weight: bold;
 }
 
-.hash-div{
+.hash-div {
     position: relative;
     top: 15%;
     left: 10%;
@@ -1385,45 +1388,45 @@ header {
     display: flex;
 }
 
-.hashes{
+.hashes {
     position: relative;
     width: 60px;
     height: 28px;
-    background: #e4e4e4;
+    background: whitesmoke;
     border-radius: 4px;
 }
 
-.text{
+.text {
     font-size: 12px;
     text-align: center;
     position: relative;
-    top:50%;
+    top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
 }
 
-@media(max-width:1024px){
-    .hashtag-box{
+@media (max-width: 1024px) {
+    .hashtag-box {
         height: 155px;
     }
 
-    .hash-head{
+    .hash-head {
         font-size: 8px;
     }
 
-    .hashes{
+    .hashes {
         width: 44px;
         height: 24px;
     }
 
-    .text{
+    .text {
         font-size: 8px;
     }
 }
 
 /*activity.js*/
 
-.activity{
+.activity {
     position: relative;
     width: 100%;
     height: fit-content;
@@ -1433,7 +1436,7 @@ header {
     border-radius: 4px;
 }
 
-.activity-head{
+.activity-head {
     width: fit-content;
     height: 11px;
     font-size: 12px;
@@ -1445,47 +1448,48 @@ header {
     font-weight: bold;
 }
 
-.activity-div{
+.activity-div {
     position: relative;
     left: 26px;
     padding-top: 2%;
     padding-bottom: 5%;
 }
 
-.activity-detail{
+.activity-detail {
     position: relative;
     width: fit-content;
     height: fit-content;
     padding-bottom: 2%;
 }
 
-.number{
+.number {
     font-size: 44px;
     color: #6C63FF;
 }
 
-.number-detail{
+.number-detail {
     color: #555;
     font-weight: bold;
     font-size: 12px;
 }
 
-@media(max-width:1024px){
-    .activity-head{
+@media (max-width: 1024px) {
+    .activity-head {
         font-size: 8px;
     }
 
-    .number{
+    .number {
         font-size: 36px;
     }
 
-    .number-detail{
+    .number-detail {
         font-size: 8px;
     }
 }
+
 /*user-create-post.js*/
 
-.create-post{
+.create-post {
     width: 90%;
     height: 125px;
     background-color: #FFFFFF;
@@ -1495,33 +1499,33 @@ header {
 
 }
 
-.create-post-head{
+.create-post-head {
     width: 100%;
     border-bottom: 1px solid rgba(107, 99, 255, 0.281);
     height: 44px;
 }
 
-.create-post-head p{
+.create-post-head p {
     position: relative;
-    top:50%;
-    transform: translate(0,-50%);
+    top: 50%;
+    transform: translate(0, -50%);
     font-size: 16px;
     height: 16px;
     color: #6C63FF;
 }
 
-.write{
+.write {
     position: relative;
-    top:10%;
+    top: 10%;
     height: fit-content;
 }
 
-.write input{
+.write input {
     height: 12px;
     font-size: 12px;
 }
 
-.send{
+.send {
     position: relative;
     width: fit-content;
     height: 40px;
@@ -1529,7 +1533,7 @@ header {
     top: 20%;
 }
 
-.send-btn{
+.send-btn {
     outline: none;
     border: none;
     background: none;
@@ -1539,10 +1543,10 @@ header {
 
 /*card.js*/
 
-.card-tb{
+.card-tb {
     position: relative;
     width: 90%;
-    padding: 0 5%;
+    padding: 0 0;
     height: 158px;
     background: #FFFFFF;
     border-radius: 4px;
@@ -1551,15 +1555,16 @@ header {
     margin-bottom: 5%;
 }
 
-.head-card{
+.head-card {
     display: flex;
     position: relative;
     width: 178px;
     height: 46.74px;
     top: 10%;
+    padding: 0 5%;
 }
 
-.photo{
+.photo {
     position: relative;
     width: 46.74px;
     height: 46.74px;
@@ -1567,13 +1572,13 @@ header {
     border-radius: 100%;
 }
 
-.photo-details{
+.photo-details {
     position: relative;
-    top:50%;
-    transform: translate(0,-50%);
+    top: 50%;
+    transform: translate(0, -50%);
 }
 
-.photo-name{
+.photo-name {
     position: relative;
     width: 121px;
     height: 11px;
@@ -1584,33 +1589,34 @@ header {
     left: 16px;
 }
 
-.des{
+.des {
     position: relative;
     left: 16px;
     width: 99px;
-    height: 13px;    
+    height: 13px;
     font-size: 10px;
     line-height: 150%;
     color: #181818;
 }
 
-.writeup{
+.writeup {
     position: relative;
-    width: 100%;
+    width: 90%;
+    padding: 0 6%;
     max-height: 46px;
     top: 20px;
 }
-.gradient{
+
+.gradient {
     position: absolute;
     height: 46px;
-    width: 90%;
-    left: 26px;
+    width: 100%;
     top: 60px;
     z-index: 1;
-    background: linear-gradient(to bottom, transparent , white);
+    background: linear-gradient(to bottom, transparent, white);
 }
 
-.writeup p{
+.writeup p {
     font-size: 14px;
     line-height: 150%;
     max-height: 46px;
@@ -1618,7 +1624,7 @@ header {
 }
 
 
-.writeup .read-more{
+.writeup .read-more {
     background: none;
     position: absolute;
     text-decoration: none;
@@ -1626,35 +1632,39 @@ header {
     font-weight: bold;
 }
 
-.button{
+button {
+    background: whitesmoke;
+}
+
+.button {
     color: #6C63FF;
 }
 
-.ask{
+.ask {
     position: relative;
 }
 
-@media(max-width:1024px){
-    .gradient{
-        left:20px;
+@media (max-width: 1024px) {
+    .gradient {
+        left: 20px;
     }
 }
 
-@media(max-width:786px){
-    .gradient{
+@media (max-width: 786px) {
+    .gradient {
         left: 16px;
     }
 }
 
-@media(max-width:425px){
-    .gradient{
-        left:12px;
+@media (max-width: 425px) {
+    .gradient {
+        left: 12px;
     }
 }
 
 /*advertisement.js*/
 
-.follower-card{
+.follower-card {
     position: relative;
     width: 100%;
     height: 700px;
@@ -1663,27 +1673,27 @@ header {
     border-radius: 4px;
 }
 
-.home-search{
+.home-search {
     position: relative;
     width: 100%;
     height: 40px;
     border: 1px solid #6C63FF;
     border-radius: 4px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    top:3%;
+    top: 3%;
     display: flex;
 }
 
-.search-svg{
+.search-svg {
     position: relative;
-    top:50%;
-    transform: translate(0,-50%);
-    left:26px;
+    top: 50%;
+    transform: translate(0, -50%);
+    left: 26px;
     width: fit-content;
     height: fit-content;
 }
 
-.search-text{
+.search-text {
     position: relative;
     width: 80%;
     height: 32px;
@@ -1692,11 +1702,11 @@ header {
     color: #6C63FF;
     left: 52px;
     margin: 0 0;
-    top:50%;
-    transform: translate(0,-50%);
+    top: 50%;
+    transform: translate(0, -50%);
 }
 
-.search-svg button{
+.search-svg button {
     outline: none;
     background: none;
     border: none;
