--- a/src/public/styles/global.css
+++ b/src/public/styles/global.css
@@ -373,16 +373,15 @@ header {
     display: flex;
     align-items: center;
     height: 100%;
-    padding: 0 15rem;
+    padding: 0 10%;
 }
 
 .space {
     flex: 1;
+    padding-right: 10px;
 }
 
 .nav-user a {
-    padding-left: 10rem;
-    padding-right: 0;
     font-size: 1.2rem;
     color: #6C63FF;
     text-transform: uppercase;
@@ -513,9 +512,7 @@ header {
         padding: 0 4rem;
     }
 
-    .nav-user {
-        display: none;
-    }
+
 }
 
 @media (max-width: 768px) {
@@ -523,6 +520,9 @@ header {
         display: none;
     }
 
+    .nav-user {
+        display: none;
+    }
 
     .navigation {
         padding: 0 1rem;
@@ -903,10 +903,10 @@ header {
 
 .create-text {
     border-style: solid;
-    border-color: #555;
     border-width: 1px;
+    border-color: #555;
     width: 100%;
-    height: 700px;
+    height: 50%;
 }
 
 .create-form {
@@ -1231,7 +1231,7 @@ header {
 
 .user-card {
     width: 100%;
-    height: 230px;
+    padding-bottom: 20px;
     background: #FFFFFF;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 4px;
@@ -1241,6 +1241,7 @@ header {
     width: 100%;
     height: 115px;
     background-color: rgb(191, 188, 245);
+    margin-bottom: 20px;
     border-radius: 4px 4px 0px 0px;
 }
 
@@ -1260,19 +1261,16 @@ header {
 
 .user-name {
     width: 100%;
-    height: 25px;
-    margin-top: 15%;
+    margin-top: 50px;
     font-weight: bold;
     color: black;
     text-align: center;
     font-size: 14px;
-    line-height: 180%;
 }
 
 .user-details-home {
     width: 100%;
-    height: 36px;
-    margin-top: 1%;
+    margin-top: 3%;
     font-size: 12px;
     line-height: 100%;
     text-align: center;
@@ -1308,6 +1306,7 @@ header {
 
     .user-name {
         font-size: 12px;
+        margin-top: 30px;
     }
 }
 
@@ -1323,9 +1322,9 @@ header {
 }
 
 .create-button {
+    padding-bottom: 1%;
+    padding-top: 1%;
     position: relative;
-    width: 80%;
-    height: 32px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -1358,7 +1357,10 @@ header {
 /*hashtag-box.js*/
 
 .hashtag-box {
-    width: 100%;
+    padding-top: 10%;
+    padding-left: 10%;
+    padding-right: 10%;
+    width: 80%;
     height: 225px;
     margin-top: 10%;
     background: #FFFFFF;
@@ -1367,24 +1369,16 @@ header {
 }
 
 .hash-head {
-    position: relative;
     width: fit-content;
-    height: 11px;
     font-size: 12px;
     line-height: 11px;
     text-transform: uppercase;
     color: #181818;
-    top: 10%;
-    left: 10%;
     font-weight: bold;
 }
 
 .hash-div {
-    position: relative;
-    top: 15%;
-    left: 10%;
-    right: 10%;
-    bottom: 5%;
+    margin-top: 10px;
     display: flex;
 }
 
@@ -1427,12 +1421,13 @@ header {
 /*activity.js*/
 
 .activity {
-    position: relative;
-    width: 100%;
+    width: calc(100% - 31px);
     height: fit-content;
+    margin-top: 10%;
     background-color: white;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    top: 3%;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    padding-left: 26px;
+    padding-right: 5px;
     border-radius: 4px;
 }
 
@@ -1444,19 +1439,16 @@ header {
     text-transform: uppercase;
     color: #181818;
     padding-top: 10%;
-    padding-left: 26px;
     font-weight: bold;
 }
 
 .activity-div {
     position: relative;
-    left: 26px;
     padding-top: 2%;
     padding-bottom: 5%;
 }
 
 .activity-detail {
-    position: relative;
     width: fit-content;
     height: fit-content;
     padding-bottom: 2%;
@@ -1487,15 +1479,21 @@ header {
     }
 }
 
+@media (max-width: 768px) {
+    .number {
+        font-size: 24px;
+    }
+}
+
 /*user-create-post.js*/
 
 .create-post {
     width: 90%;
-    height: 125px;
     background-color: #FFFFFF;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 4px;
     padding: 0 5%;
+    margin-bottom: 10px;
 
 }
 
@@ -1520,17 +1518,35 @@ header {
     height: fit-content;
 }
 
+.create-post-text {
+    width: 100%;
+    height: 150px;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    outline: none;
+    border-radius: 4px;
+    font-size: 16px;
+    resize: none;
+}
+
+.create-post-text:active {
+    border-color: rgb(136, 130, 255);
+}
+
+.create-post-text:focus {
+    border-color: rgb(136, 130, 255);
+}
+
 .write input {
     height: 12px;
     font-size: 12px;
 }
 
 .send {
-    position: relative;
-    width: fit-content;
+    width: 100%;
+    text-align: right;
     height: 40px;
-    float: right;
-    top: 20%;
 }
 
 .send-btn {
@@ -1544,30 +1560,25 @@ header {
 /*card.js*/
 
 .card-tb {
-    position: relative;
-    width: 90%;
-    padding: 0 0;
-    height: 158px;
+    box-sizing: border-box;
+    padding: 30px 0 30px 0;
+    height: 188px;
     background: #FFFFFF;
     border-radius: 4px;
-    top: 5%;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
     margin-bottom: 5%;
 }
 
 .head-card {
     display: flex;
-    position: relative;
     width: 178px;
-    height: 46.74px;
-    top: 10%;
-    padding: 0 5%;
+    height: 47px;
+    padding: 0 10px;
 }
 
 .photo {
-    position: relative;
-    width: 46.74px;
-    height: 46.74px;
+    width: 47px;
+    height: 47px;
     background-color: rgba(107, 99, 255, 0.377);
     border-radius: 100%;
 }
@@ -1603,17 +1614,16 @@ header {
     position: relative;
     width: 90%;
     padding: 0 6%;
-    max-height: 46px;
-    top: 20px;
+    top: -164px;
+    z-index: 0;
 }
 
 .gradient {
-    position: absolute;
-    height: 46px;
-    width: 100%;
-    top: 60px;
+    position: relative;
     z-index: 1;
-    background: linear-gradient(to bottom, transparent, white);
+    height: inherit;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 40%, rgba(255, 255, 255, 1) 100%);
+    top: -77px;
 }
 
 .writeup p {
@@ -1624,12 +1634,23 @@ header {
 }
 
 
-.writeup .read-more {
+.read-more {
+    z-index: 2;
+    top: -150px;
+    width: 100%;
+    text-align: right;
     background: none;
-    position: absolute;
+    position: relative;
     text-decoration: none;
     text-emphasis: none;
     font-weight: bold;
+}
+
+.read-more .button {
+    float: right;
+    cursor: pointer;
+    width: fit-content;
+    padding-right: 10px;
 }
 
 button {
@@ -1645,21 +1666,15 @@ button {
 }
 
 @media (max-width: 1024px) {
-    .gradient {
-        left: 20px;
-    }
+
 }
 
 @media (max-width: 786px) {
-    .gradient {
-        left: 16px;
-    }
+
 }
 
 @media (max-width: 425px) {
-    .gradient {
-        left: 12px;
-    }
+
 }
 
 /*advertisement.js*/
@@ -1688,7 +1703,7 @@ button {
     position: relative;
     top: 50%;
     transform: translate(0, -50%);
-    left: 26px;
+    left: 7px;
     width: fit-content;
     height: fit-content;
 }
