--- a/src/views/pages/home.ejs
+++ b/src/views/pages/home.ejs
@@ -3,12 +3,13 @@
 <head>
     <title>Smoke -h</title>
     <link type="text/css" rel="stylesheet" href='/styles/global.css'>
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <meta content="width=device-width, initial-scale=1" name="viewport"/>
 </head>
 <body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <div id="root"><%- reactApp %></div>
 <script src="/js/home.js" charset="utf-8"></script>
 <script src="/js/vendor.js" charset="utf-8"></script>
-<script src="/js/reveal.js" charset="utf-8"></script>
+<script src="/myJs/reveal.js" charset="utf-8"></script>
 </body>
 </html>
