--- a/src/public/styles/global.css
+++ b/src/public/styles/global.css
@@ -1875,3 +1875,90 @@ button {
         left: 16px;
     }
 }
+
+/*comment.js*/
+
+.comment{
+    position: relative;
+    height: fit-content;
+    width: 100%;
+    background-color: white;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    margin-bottom: 5%;
+}
+
+.comment-div{
+    position: relative;
+    width: 90%;
+    height: fit-content;
+    padding: 3% 5%;
+}
+
+.comment-head{
+    color: #555;
+    font-weight: bold;
+    margin-bottom: 2%;
+}
+
+.comment-box{
+    width: 95%;
+    height: fit-content;
+    padding-left: 5%;
+}
+
+.comments{
+    width: 100%;
+    height: fit-content;
+    border: 1px solid #999;
+    padding: 1% 1%;
+    font-size: 12px;
+    color: #555;
+}
+
+.comment-like{
+    padding-top: 1%;
+}
+
+.func{
+    padding: 0 1%;
+}
+
+.add-comment-div{
+    position: relative;
+    width: 90%;
+    height: fit-content;
+    padding: 0% 5%;
+}
+
+.comment-sec{
+    position: relative;
+    width: 95%;
+    padding: 1% 1%;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #555;
+}
+
+.add{
+    position: relative;
+    padding: 1% 0%;
+    padding-bottom: 3%;
+}
+
+.add-btn{
+    outline: none;
+    border:1px solid #6C63FF;
+    background: none;
+    background-color: white;
+    color: #6C63FF;
+    width: 60px;
+    height: 30px;
+    border-radius: 4px;
+    font-size: 12px;
+}
+
+.add-btn:hover{
+    background-color: #6C63FF;
+    color: white;
+    transition: background-color 0.3s ease-in,
+    color 0.3s ease-in;
+}
