--- a/src/public/styles/global.css
+++ b/src/public/styles/global.css
@@ -1904,6 +1904,32 @@ button {
     width: 95%;
     height: fit-content;
     padding-left: 5%;
+    margin-bottom: 1%;
+}
+
+.user-comment{
+    position: relative;
+    padding-bottom: 1%;
+}
+
+.comment-photo{
+    position: relative;
+    width: 30px;
+    height: 30px;
+    background-color: rgba(107, 99, 255, 0.377);
+    border-radius: 100%;
+    margin-right: 2%;
+}
+
+.user-comment-name{
+    font-size: 14px;
+    color: #6C63FF;
+    font-weight: 400;
+}
+
+.user-des{
+    font-size: 10px;
+    color: #555;
 }
 
 .comments{
@@ -1932,7 +1958,7 @@ button {
 
 .comment-sec{
     position: relative;
-    width: 95%;
+    width: 100%;
     padding: 1% 1%;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: #555;
