--- a/src/views/pages/home.ejs
+++ b/src/views/pages/home.ejs
@@ -11,5 +11,6 @@
 <script src="/js/home.js" charset="utf-8"></script>
 <script src="/js/vendor.js" charset="utf-8"></script>
 <script src="/myJs/reveal.js" charset="utf-8"></script>
+<script src="/myJs/revealComment.js" charset="utf-8"></script>
 </body>
 </html>
