Add the preview to comments
Signed-off-by: Anshuman Chhapolia <achhap.10.01@gmail.com>

--- a/src/public/styles/global.css
+++ b/src/public/styles/global.css
@@ -17,12 +17,12 @@ body {
 
 /* markdown */
 
-.markdown blockquote {
-    margin: 1em 40px;
+.markdown * {
+    overflow-wrap: break-word;
 }
 
-.markdown body {
-    margin: 8px
+.markdown blockquote {
+    margin: 1em 40px;
 }
 
 .markdown dd {
@@ -30,7 +30,7 @@ body {
 }
 
 .markdown dl {
-    margin: 1em 0;
+    margin: 0 0 1em 0;
 }
 
 .markdown fieldset {
@@ -43,33 +43,27 @@ body {
 }
 
 .markdown h1 {
-    margin: 0.67em 0;
-    line-height: 2em;
+    margin: 0 0 0.67em 0;
 }
 
 .markdown h2 {
-    margin: 0.83em 0;
-    line-height: 1.5em;
+    margin: 0 0 0.83em 0;
 }
 
 .markdown h3 {
-    margin: 1em 0;
-    line-height: 1.17em;
+    margin: 0 0 1em 0;
 }
 
 .markdown h4 {
-    margin: 1.33em 0;
-    line-height: 1em;
+    margin: 0 0 1.33em 0;
 }
 
 .markdown h5 {
-    margin: 1.67em 0;
-    line-height: 0.83em;
+    margin: 0 0 1.67em 0;
 }
 
 .markdown h6 {
-    margin: 2.33em 0;
-    line-height: .70em;
+    margin: 0 0 2.33em 0;
 }
 
 .markdown hr {
@@ -78,23 +72,23 @@ body {
 }
 
 .markdown menu {
-    margin: 1em 0;
+    margin: 0 0 1em 0;
 }
 
 .markdown ol {
-    margin: 1em 0;
+    margin: 0 0 1em 0;
 }
 
 .markdown p {
-    margin: 1em 0;
+    margin: 0 0 1em 0;
 }
 
 .markdown pre {
-    margin: 1em 0;
+    margin: 0 0 1em 0;
 }
 
 .markdown ul {
-    margin: 1em 0 1em 0;
+    margin: 0 0 1em 0;
 }
 
 /*index.jsx*/
@@ -390,7 +384,8 @@ a {
 .side-middle {
     position: relative;
     width: 60%;
-    margin: 0 5%;
+    box-sizing: border-box;
+    padding: 0 5%;
     align-content: center;
 }
 
@@ -1077,6 +1072,19 @@ header {
     padding: 10px 20px 10px 20px;
 }
 
+@media (max-width: 615px) {
+    .create-thread-container {
+        height: 600px;
+    }
+}
+
+@media (max-width: 500px) {
+    .create-thread-container {
+        height: 630px;
+    }
+
+}
+
 .create-thread-input {
     position: inherit;
     border: 1px solid rgba(50, 50, 50, 0.5);
@@ -1087,6 +1095,10 @@ header {
     width: 95%;
 }
 
+.create-thread-container .create-content-input {
+    height: 288px;
+}
+
 .create-thread-content-group {
     flex: 1 1 0;
     display: flex;
@@ -1095,7 +1107,7 @@ header {
 
 .create-content-container {
     border: 1px solid rgba(50, 50, 50, 0.5);
-    flex: 1 1 auto;
+    flex: 1 0 auto;
     width: 95%;
     overflow: auto;
     border-radius: 5px;
@@ -1129,11 +1141,11 @@ header {
     color: white;
 }
 
-#create-content-state-component-write {
+.create-content-state-component-write {
     margin-left: -10px;
 }
 
-#create-content-state-component-read {
+.create-content-state-component-read {
     border-radius: 0 5px 5px 0;
 }
 
@@ -1143,9 +1155,10 @@ header {
 }
 
 .create-content-input {
-    width: calc(100% - 30px);
+    box-sizing: border-box;
+    width: 100%;
     height: calc(100% - 20px);
-    padding: 10px;
+    padding: 10px 10px 5px 10px;
     font-size: 1.1em;
     border: none !important;
 }
@@ -1166,6 +1179,7 @@ header {
     padding: 5px 10px;
     outline: none;
     cursor: pointer;
+    width: 92px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -1183,7 +1197,8 @@ header {
 }
 
 .create-thread-container .preview-container {
-    width: calc(100% - 30px);
+    box-sizing: border-box;
+    width: 100%;
     height: 288px;
     overflow: auto;
     padding: 10px;
@@ -2112,10 +2127,11 @@ button {
 }
 
 .comment-box {
-    width: 95%;
-    height: fit-content;
-    padding-left: 5%;
+    width: 100%;
     margin-top: 20px;
+    display: flex;
+    flex-flow: column;
+    margin-right: 0;
     margin-bottom: 1%;
 }
 
@@ -2174,7 +2190,29 @@ button {
     position: relative;
     width: 90%;
     height: fit-content;
-    padding: 0% 5%;
+    padding: 0 5%;
+}
+
+.add-comment-div .create-content-input-container {
+    height: 120px;
+    max-height: 120px;
+    width: 100%;
+    max-width: 100%;
+    overflow: hidden;
+}
+
+.add-comment-div .create-content-input {
+    height: 100%;
+    width: 100%;
+}
+
+
+.add-comment-div .preview-container {
+    width: 100%;
+    margin-top: 5px;
+    max-height: 100%;
+    overflow: auto;
+    border: none !important;
 }
 
 .comment-sec {
