--- a/src/views/pages/create.ejs
+++ b/src/views/pages/create.ejs
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <title>Smoke -h</title>
+    <link rel="stylesheet"
+          href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/default.min.css">
     <link type="text/css" rel="stylesheet" href='/styles/global.css'>
     <meta content="width=device-width, initial-scale=1" name="viewport" />
 </head>
