--- a/src/public/styles/global.css
+++ b/src/public/styles/global.css
@@ -85,6 +85,9 @@ body {
 
 .markdown pre {
     margin: 0 0 1em 0;
+    padding: .5em;
+    background: #282c34;
+    color: #abb2bf
 }
 
 .markdown ul {
